--- a/content/modules/ROOT/pages/chapter02.adoc
+++ b/content/modules/ROOT/pages/chapter02.adoc
@@ -8,7 +8,7 @@
 
 === Testing the Insecure Application
 
-* Your first action is to deploy the image, built by the developer, to the QA environment. 
+* Your first action is to deploy the image, built by the developer, to the *QA environment*. 
 * Your experience as a QA engineer has equipped you with a toolkit of scripts, designed to automate such tasks.
 * You open your QA terminal, and type the command:
 +
@@ -16,6 +16,8 @@
 ----
 sh deploy-insecured.sh
 ----
+
+image::89_Dev_vs_QA_Terminal.png[]
 
 * As soon as the script completes its run and the application is deployed, you proceed to copy the application's URL and paste it in your browser, eager to start testing the application.
 
@@ -37,17 +39,17 @@ image::31_Ransomeware.png[]
 
 In the wake of the sophisticated ransomware attack that exploited vulnerabilities within the organization's software supply chain, a crucial meeting was convened. The conference room hosted the team involved in the incident, and you, a seasoned consultant from Red Hat, ready to guide the team through the crises. 
 
-==== 1 Signed Commits
+==== Signed Commits
 
 * "I understand you've encountered a serious issue with a ransomware infection.  Lets discuss the situation and how we can prevent this from happening again," you tell the team.
 * *QA Engineer*:  (Visibly upset)  Yeah, I couldn't believe it!  How could this have happened?
 * "Typically, vulnerabilities like this can happen when there's a gap in the software supply chain security," you explain.
 * "The first step in addressing this is setting up your *Git* environment to sign code commits. This will allow us to verify the code's origin and integrity before it gets integrated into your build process.", you add.
-* *Security Engineer*: So, you're saying that ensuring the code commits are signed can prevent tampering?
+* *Security Engineer*: So, you're saying that ensuring code commits are signed can prevent tampering?
 * "Exactly. I've already set up link:glossary.html#gitsign[*GitSign*,window=_blank] which is part of the link:glossary.html#rhtas[*Red Hat Trusted Artifact Signer (RHTAS)*,window=_blank] on our developer's laptop."
 * "You might have noticed that pop-up window from link:glossary.html#sigstore[*Sigstore*,window=_blank] requesting your credentials when you commit your code?" you ask the developer.
 * *Developer*: "Yes! Does this mean my code commits are being signed?"
-* "Correct," you confirm as you open a terminal to the development environment, and run the following command to show *GitSign* configuration 
+* "Correct," you confirm as you open a terminal to the *development environment*, and run the following command to show *GitSign* configuration 
 +
 [source, role="execute"]
 ----
@@ -56,25 +58,26 @@ git config --global --edit
 
 image::75_GitSign_Config.png[]
 
-* You enter ":q" to exit edit mode in the terminal as you explain: "All we need to do is add a step to verify that code commits are signed in our build pipeline. I will show you this step in action when I demonstrate the secure build pipeline run."
+* You enter "*:q*" followed by *return* to exit edit mode in the terminal as you explain: "All we need to do is add a step to verify that code commits are signed in our build pipeline."
+* "I will show you this step in action when I demonstrate the secure build pipeline run."
 
-==== 2 Signed Container Images
+==== Signed Container Images
 
 * "Next, we'll build a container image from the verified code, this too needs to be signed."
-* "We will use link:glossary.html#cosign[*Cosign*,window=_blank] to create a signing secret", you explain as you to execute the following command in the development environment terminal:
+* "We will use link:glossary.html#cosign[*Cosign*,window=_blank] to create a signing secret", you explain as you to execute the following command in the *development environment* terminal:
 +
 [source, role="execute"]
 ----
 COSIGN_PASSWORD=openshift cosign generate-key-pair k8s://openshift-pipelines/signing-secrets
 ----
-* "This command," you continue, "generates a key-pair. We will configure link:glossary.html#tektonchains[*Tekton Chains*,window=_blank] to use this key in signing the container image." 
+* "This command," you continue, "generates a key-pair. We will configure link:glossary.html#tektonchains[*Tekton Chains*,window=_blank] to use this key in signing the container image in our build pipeline." 
 * "The public key, or cosign.pub, will be important later on for verifying the signatures of the images you deploy to the QA environment," you tell the QA Engineer.
-* "Before deploying a container image to your QA environment, I will show you how you can use Enterprise Contracts to verify it's origin. This ensures that the image comes from your approved secure build system, not a random personal laptop."
+* "Before deploying a container image, I will show you how you can use *Enterprise Contracts* to verify it's origin. This ensures that the image comes from your approved secure build system, not a random personal laptop."
 
 
 image::76_Cosign_Secret.png[]
 
-* In the Developer's terminal, you execute the command:
+* In the Developer's terminal, you execute the command and then copy the *full* content of the public key:
 +
 [source, role="execute"]
 ----
@@ -88,17 +91,13 @@ cat cosign.pub
 vi cosign.pub
 ----
 
-* You paste the content of the public key into the file and save it by typing:
-+
-[source, role="execute"]
-----
-:wq!
-----
+* You type "*i*" to enter *insert* mode, then you paste the content of the public key into the file, followed by the "*Esc*" key to exit *insert* mode
+* You then save the file by typing "*wq!*" followed by "*return*".
 
 image::77_Copy_Public_Secret.png[]
 
 * With the *Cosign* signing secret in place, the next step is to configure *Tekton Chains* to enable image signing. 
-* "Now, let's configure Tekton Chains to start signing our images," you guide team as you run the following command in the *Development Environment* terminal:
+* "Now, let's configure *Tekton Chains* to start signing our images," you guide team as you run the following command in the *development environment* terminal:
 +
 [source, role="execute"]
 ----
@@ -125,7 +124,7 @@ oc patch TektonConfig config --type='merge' --patch "$(cat tekton-config.yaml)"
 
 image::33_Configure_Tekton_Chains.png[]
 
-* "Finally we need to setup Cosign to use our TUF mirror registry, to provide the cryptographic keys and trust information required for cosign to sign your software artifacts," you explain as you run the following in the QA environment terminal.
+* "Finally we need to setup *Cosign* to use our TUF mirror registry, to provide the cryptographic keys and trust information required for *Cosign* to sign our software artifacts," you explain as you run the following in the *QA environment* terminal.
 +
 [source, role="execute"]
 ----
@@ -134,23 +133,25 @@ cosign initialize --mirror={tuf_mirror} --root={tuf_mirror}/root.json
 
 image::78_Initialize_Cosign.png[]
 
-==== 3 Generating Software Bill of Materials (SBOM)
+==== Generating Software Bill of Materials (SBOM)
  
-* "We'll go a step further and create an attested Software Bill of Materials (SBOM)." 
-* *Developer*: What is an SBOM?
-* "Think of an SBOM as a complete list of ingredients in your application. It details all the open-source components and dependencies used to build your software. This transparency is key for swiftly identifying and addressing vulnerabilities," you explain.
+* "We'll go a step further and create an attested *Software Bill of Materials (SBOM)*." 
+* *Developer*: What is an *SBOM*?
+* "Think of an *SBOM* as a complete list of ingredients in your application. It details all the open-source components and dependencies used to build your software," you explain.
 * *Developer*: How does that help with Security?
-* "Excellent question!  Having an SBOM with attestation is crucial. Let's say a known vulnerability is discovered in one of the open-source components used in your application. With an attested SBOM, you can quickly identify which versions of your application are affected and prioritize patching. Attestation ensures the SBOM itself hasn't been tampered with, providing confidence in its accuracy."
+* "Excellent question!  Having an *SBOM* with attestation is crucial. Let's say a known vulnerability is discovered in one of the open-source components used in your application."
+* "With an attested *SBOM*, you can quickly identify which versions of your application are affected and prioritize patching. *Attestation* ensures the *SBOM* itself hasn't been tampered with, providing confidence in its accuracy." you add.
 
-==== 4 Vulnerability Scanning and Policy Enforcement
+==== Vulnerability Scanning and Policy Enforcement
 
-* *Security Engineer*:  What about detecting vulnerabilities within the images themselves?
-* "Ah, yes. I remember you struggled quiet a bit with the *Log4Shell* vulnerability a few years back. We'll include steps in the pipeline to perform both image scans and image checks against known CVEs and your organization's policies. This way, we ensure that the images are clear of known vulnerabilities and that our policies are enforced during the build and deploy stages," you answer.
+* *Security Engineer*:  "Ok, but how can we enforce policies like stop the deployment of images with known malicious libraries?"
+* "Ah, yes. I remember you struggled quiet a bit with the link:https://en.wikipedia.org/wiki/Log4Shell[*Log4Shell*,window=_blank] vulnerability a few years back."
+* "We'll include steps in the pipeline to perform both image scans and image checks against known CVEs and your organization's policies. This way, we ensure that the images are clear of known vulnerabilities and that our policies are enforced during the build and deploy stages," you answer.
 * "In fact, let me login into link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank] now and show what those policies look like," you say as you open the {acs_route}[RH ACS Console,window=_blank] and log in with your credentials username: {acs_portal_username} and password: {acs_portal_password} 
 
 image::80_rhacs_login.png[]
 
-* You expand the *Platform Configuration* list from the left menu and then click on the *Policy Management* link, as you say: "Here you can find the list of readily available policies that you can choose from."
+* You expand the *Platform Configuration* list from the left menu and then click on the *Policy Management* link, as you say: "Here you can find the list of readily available policies you can choose from."
 
 image::83_rhacs_policy_management.png[]
 
@@ -160,7 +161,7 @@ image::83_rhacs_policy_management.png[]
 image::84_rhacs_edit_policy.png[]
 
 * "Let's click on *Policy Behavior*, and if we scroll down, one of the options we can configure is the *Response Method*. Here we can decide if we want *ACS* to block the build or the deployment if the policy is violated, or simply trigger an alert."
-* "Or we can obviously configure new policies, let's setup a policy that checks if our container image is signed during the build stage and whenever we try to deploy an application to *OpenShift*," you say as you click on the *Integrations* link in the left menu.
+* "Or we can obviously configure new policies, let's setup a policy that verifies that our container image is signed during the build stage and whenever we try to deploy an application to *OpenShift*," you say as you click on the *Integrations* link in the left menu.
 
 image::81_rhacs_integrations.png[]
 
@@ -174,16 +175,16 @@ image::85_rhacs_new_integration.png[]
 
 * You start configuring the nw integration as follows:
 ** you enter *cosign* for the *Integration name*.
-** you then expand the *Cosign* field and select Add new public key
-** you set the *Public key name* as cosign.pub
-** and for the *Public key value* you copy the public key from the terminal and paste it in this field. 
+** you then expand the *Cosign* field and click on *Add new public key*.
+** you set the *Public key name* as cosign.pub.
+** and for the *Public key value* you copy the public key from the *development environment* terminal and paste it in this field. 
 ** Finally you click the *Save* button.
 
 image::86_configure_new_integration.png[]
 
 NOTE: For convenience, we have already set up a policy in ACS called *0-Trusted Signature Policy* that checks an image for a valid signature. 
 
-* "All we need to do is enable this policy and configure it to use to Cosign integration we just configured," you explain to the team as you enable the policy.
+* "All we need to do is enable this policy and configure it to use to *cosign integration* we just configured," you explain to the team as you enable the policy.
 +
 . You select *Policy Management* from the left menu.
 +
@@ -200,7 +201,7 @@ image::rhacs-policy-actions-popup.png[]
 +
 image::rhacs-policy-criteria-select.png[]
 +
-. "This is where we configure our policy to use the Cosign integration we just created ," you explain to team as you select the cosign signature integration and click the *Save* button.
+. "This is where we configure our policy to use the *cosign integration* we just created ," you explain to team as you select the cosign signature integration and click the *Save* button.
 +
 image::rhacs-policy-criteria-trusted-image-signers.png[]
 +
@@ -209,8 +210,8 @@ image::rhacs-policy-criteria-trusted-image-signers.png[]
 +
 image::rhacs-policy-actions-popup.png[]
 
-* "All done, now ACS will enforce this policy in both the build and deploy stages of our application."
-* *Security Engineer*:  That sounds comprehensive. Implementing these measures would definitely strengthen our security posture.
+* "All done, now *ACS* will enforce this policy in both the build and deploy stages of our application."
+* *Security Engineer*:  "That sounds comprehensive. Implementing these measures would definitely strengthen our security posture."
 * "Excellent! Let me prepare the necessary setup and then I will demonstrate our solution based on link:glossary.html#rhtap[*Red Hat Trusted Application Pipeline (RHTAP)*,window=_blank] in action."
 * "*RHTAP* provides pre-built pipelines with automated security checks, aiming to achieve the highest level of security (link:glossary.html#slsa[*SLSA*,window=_blank] Level 3) for built artifacts and offers the capabilities I just explained."
 
@@ -218,4 +219,4 @@ image::rhacs-policy-actions-popup.png[]
 
 As the baton passed to the QA engineer for testing, the story took a dramatic turn. The deployed application, instead of showcasing the fruits of their labor, revealed a critical vulnerability, it was infected with ransomware. This revelation abruptly interrupted the testing process and cast a shadow over the software supply chain's security, sparking concerns about vulnerability and exposure.
 
-The next chapter of our story will showcase Red Hat Trusted Application Pipeline (RHTAP) in action. We will explore how integrating these security measures into the build pipelines and deployment process can safeguard our software supply chain against the ever-present specter of cyber threats. 
+The next chapter of our story will showcase *Red Hat Trusted Application Pipeline (RHTAP)* in action. We will explore how integrating these security measures into the build pipelines and deployment process can safeguard our software supply chain against the ever-present specter of cyber threats. 
