--- a/content/modules/ROOT/pages/introduction.adoc
+++ b/content/modules/ROOT/pages/introduction.adoc
@@ -1,6 +1,6 @@
 = From Development to Deployment: Securing the Software Supply Chain with Red Hat OpenShift
 
-This workshop focuses on the critical integration of security practices into the development and deployment processes using Red Hat OpenShift and a suite of Red Hat security tools. It highlights the necessity of embedding security early in the development lifecycle, known as "shifting left." It guides participants through hands-on activities transitioning from non-secure to secure development pipelines.
+This workshop focuses on the critical integration of security practices into the development and deployment processes using Red Hat OpenShift and a suite of Red Hat security tools. It highlights the necessity of embedding security early in the development lifecycle, known as "shifting left." It guides participants through hands-on activities that transition from non-secure to secure development pipelines.
 
 == Introduction to the Workshop
 
@@ -8,9 +8,23 @@ Welcome to an engaging session where integrating security into the development a
 
 Participants will journey through the transformation from a non-secure to a secure development pipeline, underlining the practical advantages of incorporating security tools such as The Update Framework + Fulcio + Sigstore (TAS), Red Hat Advanced Cluster Security (ACS), and SonarQube into their Red Hat OpenShift workflows.
 
+This workshop will take you through the Software Development Lifecycle (SDLC). Throughout this journey, you'll step into the roles of developers, quality assurance engineers, and security engineers, experiencing firsthand the challenges these personas face. Moreover, you'll see how our solution, the Red Hat Trusted Application Pipeline (RHTAP), addresses these challenges. Our story unfolds over three chapters.
+
+=== Chapter 1: A Day in the Life of a New Developer
+
+You will begin by stepping into the shoes of a new developer eager to start writing great code. You will understand the value of *Internal Developer Portals (IDPs)*, such as the *Red Hat Developer Hub (RHDH)*, in streamlining the onboarding process for new developers, making it both efficient and enjoyable. *RHDH* significantly reduces cognitive overload for developers, enabling them to focus on what matters most — writing great code.
+
+=== Chapter 2: Tightrope Walking without a Net
+
+The story progresses as you don the hat of a Quality Assurance Engineer, uncovering the risks associated with providing developers with the tools to create great code without the necessary security guard rails to safeguard the organization against security threats.
+
+=== Chapter 3: Red Hat Trusted Application Pipeline to the Rescue
+
+In our story's final chapter, you play the role of a Red Hat Consultant who demonstrates to the team the capabilities of *the Red Hat Trusted Application Pipeline (RHTAP)*, showcasing how it can meet its security challenges without compromising developer productivity.
+
 == Workshop Challenge Overview
 
-Participants are challenged to learn and apply the transition from using non-secure development practices to implementing a comprehensive, secure development pipeline. This transformation is essential for understanding how to effectively address vulnerabilities and incorporate comprehensive security checks and tools throughout the software development lifecycle.
+The challenge set before participants is to learn and apply the transition from using non-secure development practices to implementing a comprehensive, secure development pipeline. This transformation is essential for understanding how to effectively address vulnerabilities and incorporate comprehensive security checks and tools throughout the software development lifecycle.
 
 == Presentation (30 mins)
 
@@ -22,13 +36,13 @@ An in-depth overview of RHDH is provided, emphasizing its role in bolstering the
 
 A presentation of essential security tools:
 
-* *TAS (The Update Framework + Fulcio + Sigstore)*: Described as a set of tools enhancing software supply chains through signing and verification mechanisms.
+* *TAS (The Update Framework + Fulcio + Sigstore)*: Described as tools enhancing software supply chains through signing and verification mechanisms.
 * *Red Hat Advanced Cluster Security (ACS)*: Explained as a solution for securing Kubernetes environments, focusing on vulnerability management and policy enforcement.
-* *SonarQube*: Introduced as a tool for continuous code quality and security analysis.
+* *SonarQube*: Introduced as a tool for continuous analysis of code quality and security.
 
 === Integration into Red Hat Trusted Application Pipeline (RH TAP)
 
-Discussion on integrating these security tools within RH TAP to establish a cohesive and secure application development and deployment process using Red Hat OpenShift.
+Discussion on the integration of these security tools within RH TAP to establish a cohesive and secure application development and deployment process using Red Hat OpenShift.
 
 == Hands-on Activity (1 hr 15 mins)
 
@@ -43,10 +57,9 @@ Two Golden Template Paths (GPTs) are preconfigured in RHDH: a non-secure pipelin
 
 ==== Part 2: Transitioning to the Secure Pipeline
 
-* Facilitation by the Red Hat Consultant on the transition from non-secure to secure practices.
 * *Builder Team*: Adopts secure development practices, including generating cosign key pairs and integrating TAS, for a secure image build process within Red Hat OpenShift.
-* *QA Team*: Implements new security measures, successfully validating secured images with updated protocols, and safely deploying them, marking a transition to a secure operational model.
+* *QA Team*: Implements new security measures, successfully validating secured images with updated protocols and safely deploying them, marking a transition to a secure operational model.
 
 == Conclusion
 
-The workshop wraps up by highlighting the pivotal role of the Red Hat Consultant in navigating the transition from insecure practices to a secure, efficient development and deployment pipeline using Red Hat OpenShift. The hands-on experience with RHDH, TAS, ACS, and SonarQube illustrates the actionable benefits of weaving these security tools and practices into development workflows, empowering participants to advocate for and implement robust security measures within their organizations.
+The workshop wraps up by highlighting the pivotal role of the Red Hat Consultant in navigating the transition from insecure practices to a secure, efficient development and deployment pipeline.
