--- a/content/modules/ROOT/pages/chapter01.adoc
+++ b/content/modules/ROOT/pages/chapter01.adoc
@@ -6,7 +6,7 @@
 * The keys to your new digital kingdom, your laptop and access credentials, have just been handed over to you.
 * Amid the excitement, you discover a welcome email in your inbox,  with a link to access the *Red Hat Developer Hub (RHDH)*, your organization's *Internal Developer Portal (IDP)*.
 * Included in the welcome email are some useful links to provide more details on the technologies you'll be engaging with in your new role.
-** You follow this link:glossary.html#idp[link,window=_blank] to read more about *IDPs*. 
+** You follow this link:glossary.html#idp[link,window=_blank] to read more about *IDPs*.
 ** Then, you explore another link:glossary.html#rhdh[link,window=_blank] to learn more about the *Red Hat Developer Hub (RHDH)*.
 * "It looks like this handy glossary is going to be a useful companion through my journey," you think to yourself.
 * With these resources at your fingertips, you're now ready to start working on your new project.
@@ -19,7 +19,7 @@ TIP: Throughout this guide, you'll find links to a link:glossary.html[*glossary*
 
 * Eager to check out the *RHDH*, you quickly follow the instructions from your welcome email.
 * You use this link:{developer_cluster_rhdh_url}[*URL*, ,window=_blank] to log into *RHDH*.
-* Next, you click on the *GitLab* button to start the authentication process. 
+* Next, you click on the *GitLab* button to start the authentication process.
 
 image::1_Authenticate.png[]
 
@@ -43,20 +43,20 @@ image::4_RHDH_Landing_Page.png[]
 === Running your first Golden Path Template (GPT)
 
 * Eager as you are, you immediately want to explore the link:glossary.html#gpt[Golden Path Templates (GPT),window=_blank] you've heard so much about from your colleagues.
-* You find and click the *Create* link in the left menu. 
+* You find and click the *Create* link in the left menu.
 
 image::5_Click_Create.png[]
 
-* Among the options, you spot the *GPT* titled *Insecured Quarkus Service Software Supply Chain* 
+* Among the options, you spot the *GPT* titled *Insecured Quarkus Service Software Supply Chain*
 * Feeling a mix of excitement and curiosity, you click the *Choose* button.
 
 NOTE: This lab has been pre-configured with two Golden Path Templates (GPTs), a non-secure GPT and a secure GPT. However, lets pretend that our developer only sees the insecure GPT at this point and the naming of the GPT does not hint at the forthcoming challenges associated with running an insecure software supply pipeline.
 
 image::6_Choose_Insecure_GPT.png[]
 
-* As the form for the *Golden Path Template (GPT)* appears, you're pleasantly surprised. 
-* Unlike other complicated ticketing systems you've used before, this form is refreshingly simple and seems tailor-made for your particular task. 
-* "Ah, so my team has opted to use link:glossary.html#quarkus[*Quarkus*,window=_blank] for this project. That's a great framework for developing Kubernetes-native applications," you tell yourself, with excitement sparking within you.. 
+* As the form for the *Golden Path Template (GPT)* appears, you're pleasantly surprised.
+* Unlike other complicated ticketing systems you've used before, this form is refreshingly simple and seems tailor-made for your particular task.
+* "Ah, so my team has opted to use link:glossary.html#quarkus[*Quarkus*,window=_blank] for this project. That's a great framework for developing Kubernetes-native applications," you tell yourself, with excitement sparking within you..
 * You click *Next*.
 
 image::7_First_Step_Form.png[]
@@ -67,7 +67,7 @@ image::7_First_Step_Form.png[]
 
 image::7_Second_Step_Form.png[]
 
-* Now, you hit the *Review* button for a final look at the form inputs. 
+* Now, you hit the *Review* button for a final look at the form inputs.
 
 image::9_Click_Review_Form.png[]
 
@@ -93,43 +93,40 @@ image::11_Executed_GPT.png[]
 
 image::12_Dashboard.png[]
 
-* The first thing you decide to do is dive into coding on your project. 
-* You access your Virtual Network Computer (VNC) interface using the link:{developer_cluster_novnc_web_url}[*link*,window=_blank].
-* When prompted, you enter your password: {developer_cluster_novnc_user_password}, and then click on the *Send Credentials* button.
+* The first thing you decide to do is dive into coding on your project.
+* You decide to use the Integrated Development Environment (IDE), *OpenShift Dev Spaces*, that Developer Hub has been configured to use.  You find and click on the *OpenShift Dev Spaces (VSCode)* link conveniently located in your Dashboard.
 
-NOTE: Normally, developers would use *VSCode* on their local laptops. However, to simplify the setup process, we've setup *VSCode* on a remote RHEL server accessible via a *VNC*. 
+NOTE: link:https://developers.redhat.com/products/openshift-dev-spaces/overview[*OpenShift Dev Spaces*,window=_blank] is a Kubernetes native workspace and IDE that is part of the OpenShift platform. This tool allows your platform team to offer a full fledged IDE that requires zero configuration and effort by your app developers.
 
-image::38_Send_Credentials.png[]
+image::13_Click_OpenShift_DevSpaces.png[]
 
-* Once the RHEL server welcome screen appears, you click on *Activities* at the top left of your screen and enter "*VSCode*" in the search bar.
-* You then launch *VSCode* by clicking on it's icon.
+* You log in using your OpenShift credentials by clicking the *Log in with OpenShift* button.
 
-image::39_Search_For_VSCode.png[]
+image::14_Login_With_OpenShift.png[]
 
-* "Alright, now I am ready to clone my project's git repo," you tell yourself.
-* You open the *No VNC* clipboard, then you paste the following link to your project repo into it: 
-** Project Repo URL: {clone_insecure_url}
+* Then, you choose the Single Sign-On option by clicking the *rhsso* button and entering your username and password as follows:
+** *Username*: {developer_cluster_rhdh_user}
+** *Password*: {developer_cluster_rhdh_user_password}
+* After inputting your credentials, you click the *Sign in* button.
 
-image::68_NoVNC_Clipboard.png[]
+image::15_Login_RHSSO.png[]
 
-image::69_NoVNC_Clipboard_with_URL.png[]
+* You authorize *OpenShift Dev Spaces* to access your account by clicking the *Allow selected permissions* button.
 
-* You copy the link from the clipboard as you prepare to use it in *VSCode*.
-* You click on the *Source Control* icon in the left menu, then on the *Clone Repository* button, and paste the link you just copied from the clipboard.
+image::16_Allow_Selected_Permissions.png[]
 
-NOTE: To copy & paste between your laptop and the remote Linux VM, you need to use the VNC clipboard.
+* Subsequently, you click *Authorize* to grant *OpenShift Dev Spaces* access to your *GitLab* account.
 
-image::70_Clone_Repo_In_VSCode.png[]
+image::17_Authorize_Gitlab.png[]
 
-* You select the current location as the repository destination by clicking on the *Select as Repository Destination* button.
+* *OpenShift Dev Spaces* then begins creating your workspace, processing a *Devfile* containing all the configuration needed to set up your development environment.
 
-image::41_Choose_Folder.png[]
+NOTE: A link:https://devfile.io/[*Devfile*,window=_blank] is a YAML configuration file that serves as a portable definition for a development environment. It is designed to be a universal format that can describe any type of development environment, making it easier for developers to code, build, test, and run applications across different tools and platforms without the need to manually configure each environment.
 
-* You load the cloned repository in *VSCode* by clicking *Open* in the pop-up window that follows.
+image::18_DevSpaces_Process_Devfile.png[]
 
-image::42_Open_Cloned_Repo.png[]
-
-* After choosing to trust the authors, you are ready to start working on your task.
+* After waiting a few minutes for *OpenShift Dev Spaces* to finish setting up your workspace, you're presented with a fully fledged IDE accessible from your browser.
+* You click the button *Yes, I trust the authors*.
 
 image::19_Trust_Authors.png[]
 
@@ -139,46 +136,44 @@ image::19_Trust_Authors.png[]
 . Update the JUnit test verifying this method's output.
 . Amend the documentation to reflect your changes.
 
-* In your *insecured-app* workspace, you expand the folders *src -> main -> java*, and then open the *ExampleResource.java* file. 
+NOTE: The JUnit test for the Hello method needs updating; otherwise, the Build step in the CI/CD pipeline would fail due to discrepancies between the code and its test.
+
+* In your *insecured-app* workspace, you expand the folders *src -> main -> java*, and then open the *ExampleResource.java *file.
 * On line 14, you replace the return message of the hello method from "Hello RESTEasy" to "Hello from RHDH".
 
 image::20_Modify_ExampleResource.png[]
 
-* Next, you update the JUnit test for this method. 
-* You expand the folders *src -> main -> test*, and open the *ExampleResourceTest.java* file. 
+* Next, you update the JUnit test for this method.
+* You expand the folders *src -> main -> test*, and open the *ExampleResourceTest.java* file.
 * On line 18, you change the expected text from "Hello RESTEasy" to "Hello from RHDH".
-
-NOTE: The JUnit test for the Hello method needs updating to be the exactly the same as in the *ExampleResource.java**; otherwise, the build step in the CI/CD pipeline would fail due to discrepancies between the code and its test.
 
 image::21_Modify_ExampleResourceTest.png[]
 
 * You recall your team's explanation that the documentation coexists with the code, nestled in the same git repository as a markdown file.
 * You expand the docs folder and open the markdown file *Index.md*.
-* At the document's end, you add: "Release 1.0: Code update."
+* At the document's end, you add: "Release 1.0: Update to ExampleResource.hello() method to return 'Hello from RHDH'."
 
-image::71_Update_Documentation.png[]
+image::22_Index_File.png[]
 
 * Having completed your task, you're ready to commit your changes.
-* You open the file menu and choose to *Save All* your changes.
 * You click on the *Source Control* icon located in the left menu.
 * Then, you enter the commit message “My First Commit" and click on the *Commit* button to finalize your changes.
 
-image::72_Commit_Changes.png[]
+image::23_My_First_Commit.png[]
 
-* A form appears in your browser, prompting you for your credentials. You fill in the details as follows:
-** Username: {developer_cluster_rhdh_user}
-** Password: {developer_cluster_rhdh_user_password}
+* In the pop-up window that follows, you click *Yes* to stage your changes.
 
-NOTE: You will learn more about the importance of this step in the next chapter of this workshop.
+image::24_Stage_Changes.png[]
 
-image::45_Sigstore_Signin.png[]
-
-* After successful authentication, you close the browser and switch back to *VSCode*.
 * Finally, you click on the *Sync Changes* button.
 
 image::25_SYNC_Changes.png[]
 
-* You've successfully implemented your change and updated the documentation in one commit, following the "docs as code" methodology where documentation is treated with the same level of care and under the same process as source code. 
+* In the pop-up that follows, you click *OK* to push your changes and complete the process.
+
+image::26_OK_To_Push_Changes.png[]
+
+* You've successfully implemented your change and updated the documentation in one commit, following the "docs as code" methodology where documentation is treated with the same level of care and under the same process as source code.
 * You are delighted by knowing that following this methodology ensures that your documentation is as current as your code itself.
 * Your commit triggers the build pipeline for your *Quarkus* application.
 * You switch back to the *RHDH Dashboard* tab in your browser and select the *CI tab* from the top menu.
@@ -186,7 +181,7 @@ image::25_SYNC_Changes.png[]
 image::27_Click_on_CI_Tab.png[]
 
 * And just as you expected, a build pipeline has already been triggered.
-* You eagerly expand the pipeline view to monitor the progress of this pipeline run. 
+* You eagerly expand the pipeline view to monitor the progress of this pipeline run.
 
 image::28_Expand_Pipeline_View.png[]
 
@@ -201,7 +196,7 @@ image::87_Image_Registry.png[]
 
 image::88_Docs_View.png[]
 
-* With a sense of accomplishment, your task now complete, you draft an email to the QA team, inviting them to begin testing your changes. 
+* With a sense of accomplishment, your task now complete, you draft an email to the QA team, inviting them to begin testing your changes.
 
 '''
 
@@ -209,7 +204,7 @@ image::88_Docs_View.png[]
 
 Our story unfolds with a bright-eyed developer starting his new role, welcomed by the innovative environment of the *Red Hat Developer Hub (RHDH)*. This *Internal Developer Portal (IDP)*, with its *Golden Path Templates (GPTs)* streamlined and automated his onboarding process. The *GPT* offered a self-service approach to project initiation, enabling our developer to quickly dive into his task, without the overhead of configuring the underlying technology of the development environment.
 
-The next chapter of our story uncovers the risks associated with providing developers with the tools to create great code without the necessary security guard rails that are crucial for safeguarding the organization against security threats. 
+The next chapter of our story uncovers the risks associated with providing developers with the tools to create great code without the necessary security guard rails that are crucial for safeguarding the organization against security threats.
 
 
 
