--- a/content/modules/ROOT/pages/chapter02.adoc
+++ b/content/modules/ROOT/pages/chapter02.adoc
@@ -1,14 +1,14 @@
 == Chapter 2: Tightrope Walking without a Net
 
-* As our story unfolds, you find yourself donning the hat of a QA engineer. 
-* The moment you receive an email from the *Quarkus* developer announcing the completion of his task, the baton is passed to you. 
+* As our story unfolds, you find yourself donning the hat of a QA engineer.
+* The moment you receive an email from the *Quarkus* developer announcing the completion of his task, the baton is passed to you.
 * It's now in your hands to validate the integrity and quality of the code delivered.
 
 '''
 
 === Testing the Insecure Application
 
-* Your first action is to deploy the image, built by the developer, to the *QA environment*. 
+* Your first action is to deploy the image, built by the developer, to the *QA environment*.
 * Your experience as a QA engineer has equipped you with a toolkit of scripts, designed to automate such tasks.
 * You open your QA terminal, and type the command:
 +
@@ -25,8 +25,8 @@ NOTE: It may take the application a few minutes to start after the script comple
 
 image::29_Deploy_Insecure_Application.png[]
 
-* But, oh no! 
-* To your disbelief, the application has been compromised, now infected with a ransomware virus. 
+* But, oh no!
+* To your disbelief, the application has been compromised, now infected with a ransomware virus.
 * How could this have possibly happened?
 
 image::31_Ransomeware.png[]
@@ -37,7 +37,7 @@ image::31_Ransomeware.png[]
 
 === Installing the Guard Rails
 
-In the wake of the sophisticated ransomware attack that exploited vulnerabilities within the organization's software supply chain, a crucial meeting was convened. The conference room hosted the team involved in the incident, and you, a seasoned consultant from Red Hat, ready to guide the team through the crises. 
+In the wake of the sophisticated ransomware attack that exploited vulnerabilities within the organization's software supply chain, a crucial meeting was convened. The conference room hosted the team involved in the incident, and you, a seasoned consultant from Red Hat, ready to guide the team through the crises.
 
 ==== Signed Commits
 
@@ -46,10 +46,13 @@ In the wake of the sophisticated ransomware attack that exploited vulnerabilitie
 * "Typically, vulnerabilities like this can happen when there's a gap in the software supply chain security," you explain.
 * "The first step in addressing this is setting up your *Git* environment to sign code commits. This will allow us to verify the code's origin and integrity before it gets integrated into your build process.", you add.
 * *Security Engineer*: So, you're saying that ensuring code commits are signed can prevent tampering?
-* "Exactly. I've already set up link:glossary.html#gitsign[*GitSign*,window=_blank] which is part of the link:glossary.html#rhtas[*Red Hat Trusted Artifact Signer (RHTAS)*,window=_blank] on our developer's laptop."
-* "You might have noticed that pop-up window from link:glossary.html#sigstore[*Sigstore*,window=_blank] requesting your credentials when you commit your code?" you ask the developer.
-* *Developer*: "Yes! Does this mean my code commits are being signed?"
-* "Correct," you confirm as you open a terminal to the *development environment*, and run the following command to show *GitSign* configuration 
+* "Exactly. To get the team accustomed to this new way of signing commits, we've set up an isolated development environment that has already been configured with link:glossary.html#gitsign[*GitSign*,window=_blank] which is part of the link:glossary.html#rhtas[*Red Hat Trusted Artifact Signer (RHTAS)*,window=_blank]."
+* "We've decided to keep this IDE separate from Developer Hub for now so as to not impact our other development teams during this POC.
+* "You might notice two important changes in this POC:
+** A new software template *Secured Quarkus Service Software Supply Chain* with an option called *Verify Commits* that should be enabled to verify signatures on all commits.
+** A pop-up window from link:glossary.html#sigstore[*Sigstore*,window=_blank] in your new IDE requesting your credentials when commiting your code.
+* *Developer*: "Yes! Does this mean my code commits are being signed with my credentials?"
+* "Correct," you confirm as you open a terminal to the *development environment*, and run the following command to show *GitSign* configuration
 +
 [source, role="execute"]
 ----
@@ -70,7 +73,7 @@ image::75_GitSign_Config.png[]
 ----
 COSIGN_PASSWORD=openshift cosign generate-key-pair k8s://openshift-pipelines/signing-secrets
 ----
-* "This command," you continue, "generates a key-pair. We will configure link:glossary.html#tektonchains[*Tekton Chains*,window=_blank] to use this key in signing the container image in our build pipeline." 
+* "This command," you continue, "generates a key-pair. We will configure link:glossary.html#tektonchains[*Tekton Chains*,window=_blank] to use this key in signing the container image in our build pipeline."
 * "The public key, or cosign.pub, will be important later on for verifying the signatures of the images you deploy to the QA environment," you tell the QA Engineer.
 * "Before deploying a container image, I will show you how you can use *Enterprise Contracts* to verify it's origin. This ensures that the image comes from your approved secure build system, not a random personal laptop."
 
@@ -96,7 +99,7 @@ vi cosign.pub
 
 image::77_Copy_Public_Secret.png[]
 
-* With the *Cosign* signing secret in place, the next step is to configure *Tekton Chains* to enable image signing. 
+* With the *Cosign* signing secret in place, the next step is to configure *Tekton Chains* to enable image signing.
 * "Now, let's configure *Tekton Chains* to start signing our images," you guide team as you run the following command in the *development environment* terminal:
 +
 [source, role="execute"]
@@ -116,7 +119,7 @@ spec:
     artifacts.pipelinerun.format: in-toto
     artifacts.pipelinerun.storage: oci
     transparency.enabled: true
-    transparency.url: http://rekor-server.rekor-system.svc
+    transparency.url: http://rekor-server.trusted-artifact-signer.svc
   config: {}
 EOF
 oc patch TektonConfig config --type='merge' --patch "$(cat tekton-config.yaml)"
@@ -128,14 +131,14 @@ image::33_Configure_Tekton_Chains.png[]
 +
 [source, role="execute"]
 ----
-cosign initialize --mirror={tuf_mirror} --root={tuf_mirror}/root.json
+cosign initialize --mirror=https://tuf.{qa_cluster_openshift_cluster_ingress_domain} --root=https://tuf.{qa_cluster_openshift_cluster_ingress_domain}/root.json
 ----
 
 image::78_Initialize_Cosign.png[]
 
 ==== Generating Software Bill of Materials (SBOM)
- 
-* "We'll go a step further and create an attested *Software Bill of Materials (SBOM)*." 
+
+* "We'll go a step further and create an attested *Software Bill of Materials (SBOM)*."
 * *Developer*: What is an *SBOM*?
 * "Think of an *SBOM* as a complete list of ingredients in your application. It details all the open-source components and dependencies used to build your software," you explain.
 * *Developer*: How does that help with Security?
@@ -147,7 +150,7 @@ image::78_Initialize_Cosign.png[]
 * *Security Engineer*:  "Ok, but how can we enforce policies like stop the deployment of images with known malicious libraries?"
 * "Ah, yes. I remember you struggled quiet a bit with the link:https://en.wikipedia.org/wiki/Log4Shell[*Log4Shell*,window=_blank] vulnerability a few years back."
 * "We'll include steps in the pipeline to perform both image scans and image checks against known CVEs and your organization's policies. This way, we ensure that the images are clear of known vulnerabilities and that our policies are enforced during the build and deploy stages," you answer.
-* "In fact, let me login into link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank] now and show what those policies look like," you say as you open the {acs_route}[RH ACS Console,window=_blank] and log in with your credentials username: {acs_portal_username} and password: {acs_portal_password} 
+* "In fact, let me login into link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank] now and show what those policies look like," you say as you open the {qa_cluster_acs_route}[RH ACS Console,window=_blank] and log in with your credentials username: {qa_cluster_acs_portal_username} and password: {qa_cluster_acs_portal_password}
 
 image::80_rhacs_login.png[]
 
@@ -177,12 +180,12 @@ image::85_rhacs_new_integration.png[]
 ** you enter *cosign* for the *Integration name*.
 ** you then expand the *Cosign* field and click on *Add new public key*.
 ** you set the *Public key name* as cosign.pub.
-** and for the *Public key value* you copy the public key from the *development environment* terminal and paste it in this field. 
+** and for the *Public key value* you copy the public key from the *development environment* terminal and paste it in this field.
 ** Finally you click the *Save* button.
 
 image::86_configure_new_integration.png[]
 
-NOTE: For convenience, we have already set up a policy in ACS called *0-Trusted Signature Policy* that checks an image for a valid signature. 
+NOTE: For convenience, we have already set up a policy in ACS called *0-Trusted Signature Policy* that checks an image for a valid signature.
 
 * "All we need to do is enable this policy and configure it to use to *cosign integration* we just configured," you explain to the team as you enable the policy.
 +
@@ -219,4 +222,4 @@ image::rhacs-policy-actions-popup.png[]
 
 As the baton passed to the QA engineer for testing, the story took a dramatic turn. The deployed application, instead of showcasing the fruits of their labor, revealed a critical vulnerability, it was infected with ransomware. This revelation abruptly interrupted the testing process and cast a shadow over the software supply chain's security, sparking concerns about vulnerability and exposure.
 
-The next chapter of our story will showcase *Red Hat Trusted Application Pipeline (RHTAP)* in action. We will explore how integrating these security measures into the build pipelines and deployment process can safeguard our software supply chain against the ever-present specter of cyber threats. 
+The next chapter of our story will showcase *Red Hat Trusted Application Pipeline (RHTAP)* in action. We will explore how integrating these security measures into the build pipelines and deployment process can safeguard our software supply chain against the ever-present specter of cyber threats.
