--- a/content/modules/ROOT/pages/chapter03.adoc
+++ b/content/modules/ROOT/pages/chapter03.adoc
@@ -20,29 +20,43 @@ image::34_Run_Secure_GPT.png[]
 
 image::35_Review_Commits_Enabled.png[]
 
-* You click the *Review* button. 
+* You click the *Review* button.
 * After quickly reviewing the summary and seeing that everything looks great, you proceed to click the *Create* button.
 
 image::36_Create_Second_GPT.png[]
 
-* The secure *GPT* executes successfully, you seize this moment to explain the value of using *GPTs* in this scenario. 
+* The secure *GPT* executes successfully, you seize this moment to explain the value of using *GPTs* in this scenario.
 * "This environment," you explain, "is created with all the security guardrails we discussed. What's fantastic about *Golden Path Templates* is that the enhancements in the security pipeline are entirely transparent to our developer. This means they won't impact how he codes or builds applications."
 
-==== Code Commit 
+==== Code Commit
 
-* Next, you switch back to your *VSCode* running on the remote RHEL VM as you say: "To trigger our secure build pipeline, let's open VSCode and make a small change to the documentation."
+* The first thing you decide to do is "To trigger our secure build pipeline, let's open VSCode and make a small change to the documentation."
+* You access your Virtual Network Computer (VNC) interface using the link:{developer_cluster_novnc_web_url}[*link*,window=_blank].
+* When prompted, you enter your password: {developer_cluster_novnc_user_password}, and then click on the *Send Credentials* button.
 
-NOTE: If you your VNC session timed out, simply login again by and provide this password {developer_cluster_novnc_user_password} and click on the *Send Credentials* button just like you did before.
+NOTE: Normally, developers would use *VSCode* on their local laptops. However, to simplify the setup process, we've setup *VSCode* on a remote RHEL server accessible via a *VNC*.
 
-* You tell the team: "We are now going to clone our secured app git repo," you click on *File* in the top menu, then select *New Window*.
-* In the new instance of VSCode, you click on the *Source Control* icon in the left menu.
-* Then on the *Clone Repository* button and paste the link to the Source Code Repository: {clone_secure_url}
+image::38_Send_Credentials.png[]
 
-NOTE: Remember to use the VNC clipboard to copy and paste.
+* Once the RHEL server welcome screen appears, you click on *Activities* at the top left of your screen and enter "*VSCode*" in the search bar.
+* You then launch *VSCode* by clicking on it's icon.
 
-image::40_Click_On_Source_Control.png[]
+image::39_Search_For_VSCode.png[]
 
-* You explain to the team: "I'll select the current location as the Repository Destination on our remote VM." 
+* "Alright, now I am ready to clone my project's git repo," you tell yourself.
+* You open the *No VNC* clipboard, then you paste the following link to your project repo into it:
+** Project Repo URL: {clone_secure_url}
+
+image::68_NoVNC_Clipboard.png[]
+
+image::69_NoVNC_Clipboard_with_URL.png[]
+
+* You copy the link from the clipboard as you prepare to use it in *VSCode*.
+* You click on the *Source Control* icon in the left menu, then on the *Clone Repository* button, and paste the link you just copied from the clipboard.
+
+NOTE: To copy & paste between your laptop and the remote Linux VM, you need to use the VNC clipboard.
+
+* You explain to the team: "I'll select the current location as the Repository Destination on our remote VM."
 
 image::41_Choose_Folder.png[]
 
@@ -71,7 +85,7 @@ image::45_Sigstore_Signin.png[]
 
 image::46_SigStore_Authentication_Complete.png[]
 
-* After providing your credentials and completing the authentication process, you return to VSCode and click the *Sync Changes* button. 
+* After providing your credentials and completing the authentication process, you return to VSCode and click the *Sync Changes* button.
 
 image::47_Sync_Change.png[]
 
@@ -97,7 +111,7 @@ image::50_Secure_Build_Pipeline.png[]
 
 image::51_Click_On_Verify_Commit.png[]
 
-* "Here in the log, you can see the user we used and the comment we provided when we made the last code change.” 
+* "Here in the log, you can see the user we used and the comment we provided when we made the last code change.”
 * "The *verify-commit* task executes the command link:https://git-scm.com/book/en/v2/Git-Tools-Signing-Your-Work[*git verify-commit*,window=_blank] to verify that the signature is valid, before the pipeline moves to the next task." you point out.
 
 image::52_Verify_Commit_Log.png[]
@@ -112,8 +126,10 @@ image::53_Scan_Source_Task.png[]
 * "We can view the scan results from the pipeline logs as we did before, or we could log in to *SonarQube* to get an in-depth report."
 * "Let's look at the *SonarQube* report this time," you decide.
 * To access *SonarQube*, you use the following link:
-** SonarQube URL: {SonarQube_url}
-* You click on the project link in the *SonarQube* Dashboard. 
+** SonarQube URL: {sonarqube_url}
+** Username: {sonarqube_username}
+** Password: {sonarqube_password}
+* You click on the project link in the *SonarQube* Dashboard.
 
 image::54_SonarQube_Dashboard.png[]
 
@@ -141,7 +157,7 @@ image::59_Generated_Artifacts_Registery.png[]
 
 === Task 4: Image Scan
 
-* "Let's switch back to our pipeline view in *RHDH*, and look at the tasks performed by link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank]," you suggest. 
+* "Let's switch back to our pipeline view in *RHDH*, and look at the tasks performed by link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank]," you suggest.
 * "The *acs-image-scan* task performs an image scan to identify known vulnerabilities within the container image. It compares the image components against known vulnerability databases, uncovering any CVEs (Common Vulnerabilities and Exposures) that might compromise the container."
 
 image::60_ACS_Image_Scan_Task.png[]
@@ -156,7 +172,7 @@ image::62_Image_Scan_Result.png[]
 
 === Task 5: ACS Image Check
 
-* You switch back to the pipeline view as you explain: "*ACS* doesn't stop at scanning; it can also assess whether the image adheres to predefined rules by performing an image check". 
+* You switch back to the pipeline view as you explain: "*ACS* doesn't stop at scanning; it can also assess whether the image adheres to predefined rules by performing an image check".
 * "The *image-scan-check* task evaluates the container image against policies and compliance standards. This includes not running as root, using approved base images, or avoiding prohibited software packages, for example."
 
 image::63_ACS_Image_Check_Task.png[]
@@ -182,7 +198,7 @@ image::66_SBOM.png[]
 === Demonstrating the Secure Deploy Process
 
 * Addressing the QA engineer, you begin, “Now, I'm going to show you how to validate that an image is signed before deploying it for testing.”
-* “You'll use the link:glossary.html#ec[*Enterprise Contract CLI (ec)*,window=_blank] along with *Cosign* to first check the original image from the insecure application. I've prepared a script specifically for this purpose.” 
+* “You'll use the link:glossary.html#ec[*Enterprise Contract CLI (ec)*,window=_blank] along with *Cosign* to first check the original image from the insecure application. I've prepared a script specifically for this purpose.”
 * You execute the command in the QA environment terminal:
 +
 [source, role="execute"]
@@ -223,7 +239,7 @@ sh deploy-secured.sh
 
 === Workshop - Summary
 
-As we close the curtains on this workshop, it’s important to reflect on the journey we’ve embarked on together. 
+As we close the curtains on this workshop, it’s important to reflect on the journey we’ve embarked on together.
 Throughout this experience, you've stepped into the shoes of developers, QA engineers, and security professionals, confronting head-on the hurdles that each role faces. More importantly, you've seen firsthand how the Red Hat Developer Hub (RHDH) and the Red Hat Trusted Application Pipeline (RHTAP) can transform these challenges into stepping stones for innovation and a solid foundation for building applications in a *Trusted Software Supply Chain*.
 Thank you for joining us on this journey. May the knowledge you’ve gained empower you to become a beacon of innovation and security in your organization. Here's to your success in crafting a future built on innovation and security!
 
