--- a/content/modules/ROOT/pages/instructions.adoc
+++ b/content/modules/ROOT/pages/instructions.adoc
@@ -45,7 +45,7 @@ spec:
     artifacts.pipelinerun.format: in-toto
     artifacts.pipelinerun.storage: oci
     transparency.enabled: true
-    transparency.url: http://rekor-server.rekor-system.svc
+    transparency.url: http://rekor-server.trusted-artifact-signer.svc
   config: {}
 EOF
 oc patch TektonConfig config --type='merge' --patch "$(cat tekton-config.yaml)"
