--- a/content/modules/ROOT/pages/variables-guide-delete-me.adoc
+++ b/content/modules/ROOT/pages/variables-guide-delete-me.adoc
@@ -27,9 +27,9 @@ IMPORTANT: Once the showroom guide is created, please delete the file and remove
 |{counter:node} |developer_cluster_devspaces_url | {developer_cluster_devspaces_url}
 |{counter:node} |developer_cluster_devspaces_user | {developer_cluster_devspaces_user}
 |{counter:node} |developer_cluster_devspaces_user_password | {developer_cluster_devspaces_user_password}
-|{counter:node} |sonarqube_url | {sonarqube_url}
-|{counter:node} |sonarqube_username | {sonarqube_username}
-|{counter:node} |sonarqube_password | {sonarqube_password}
+|{counter:node} |developer_cluster_sonarqube_url | {developer_cluster_sonarqube_url}
+|{counter:node} |developer_cluster_sonarqube_username | {developer_cluster_sonarqube_username}
+|{counter:node} |developer_cluster_sonarqube_password | {developer_cluster_sonarqube_password}
 |===
 ****
 
